[Misc] Removing bad "--add-opens" (java.concurrent doesn't exist, it's java.util.concurrent), already covered by the open on "java.util"